--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-music-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",//changed
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js" //changed
