--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",//changed
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    //"test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js" //changed
   },
   "author": "",
