--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     //"test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server" //changed
   },
+
+  "engines": {
+    "node": "^8", 
+    "npm" :"^5"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
