--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mongoose": "^4.11.8"
   },
   "engines": {
-    "node": "^8",
-    "npm": "^5"
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
