--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,9 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "mongoose": "^4.11.8"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
