--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "vue-music-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
